force-app/main/default/objects/LPCR_PlanFacturation__c/LPCR_PlanFacturation__c.object-meta.xml
<CustomObject>
    <label>Billing Plan</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Billing Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>