force-app/main/default/objects/LPCR_PlanFacturation__c/fields/LPCR_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte__c</fullName>
    <formula>LPCR_OrderItem__r.Order.blng__BillingAccount__r.Name</formula>
    <label>Compte</label>
    <type>Text</type>
</CustomField>