force-app/main/default/objects/LPCR_PlanFacturation__c/fields/LPCR_EndDate__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>