force-app/main/default/objects/LPCR_PlanFacturation__c/fields/LPCR_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Billing Plans</relationshipLabel>
    <relationshipName>Billing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>