force-app/main/default/objects/LPCR_PlanFacturation__c/fields/LPCR_StartDate__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>