force-app/main/default/objects/LPCR_PlanFacturation__c/fields/LPCR_TotalContractValue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotalContractValue__c</fullName>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>